--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-# Copy this file to .env and update values with your real credentials
-# Example MongoDB URI (replace <username>, <password>, and <dbname> with your values):
+# Sao chép tệp này vào .env và cập nhật các giá trị bằng thông tin đăng nhập thực của bạn
+# Ví dụ URI MongoDB (thay thế <username>, <password> và <dbname> bằng giá trị của bạn):
 MONGODB_URI=mongodb+srv://<username>:<password>@cluster0.example.mongodb.net/<dbname>?retryWrites=true&w=majority
